# fused-ssim

./: .gitignore  CMakeLists.txt  README.md  ext.cpp  fused_ssim.py  pyproject.toml  setup.py  ssim.cu  ssim.h  ssim.mm  ssim2d.cu  ssim2d.h  ssim3d.cu  ssim3d.h  ssim3d_by_2d.cu  ssim3d_by_2d.h  ssim_sycl.cpp  test.py
fused_ssim/: __init__.py
fused_ssim3d/: __init__.py
fused_ssim_sycl/: fused_ssim.py  kernels_torch.py  torch_kernel_calls.py
fused_ssim_sycl_kernels/: CMakeLists.txt
fused_ssim_sycl_kernels/include/: bindings.hpp  utils.hpp
fused_ssim_sycl_kernels/include/kernels/: FusedSSIMBackwardKernel.hpp  FusedSSIMForwardKernel.hpp
fused_ssim_sycl_kernels/src/: ext.cpp  fusedssim_backward.cpp  fusedssim_backward_kernel_call.cpp  fusedssim_forward.cpp  fusedssim_forward_kernel_call.cpp
fusedssim/: __init__.py  _ssim.py
fusedssim/cpp/include/: ssim.hpp
fusedssim/cpp/include/fusedssim/xpu/: FusedSSIMBackwardKernel.hpp  FusedSSIMForwardKernel.hpp
fusedssim/cpp/include/sycl/: FusedSSIMBackwardKernel.hpp  FusedSSIMForwardKernel.hpp
fusedssim/cpp/src/: ext.cpp
fusedssim/cpp/src/xpu/: fusedssim.cpp  fusedssim_backward.cpp
halide/: build.sh  build_mps.sh  ext_halide.cpp  ext_halide_mps.mm  fused_ssim.cpp  gen.sh  test_halide.py
src/fusedssim_sycl/: __init__.py  fusedssim.py  torch_kernel_calls.py
src/fusedssim_sycl/_kernels/: CMakeLists.txt
src/fusedssim_sycl/_kernels/include/: bindings.hpp
src/fusedssim_sycl/_kernels/include/kernels/: FusedSSIMBackwardKernel.hpp  FusedSSIMForwardKernel.hpp
src/fusedssim_sycl/_kernels/src/: ext.cpp  fusedssim_backward_kernel_call.cpp  fusedssim_forward_kernel_call.cpp
tests/: genplot.py  genplot_2D.py  genplot_3D.py  genplot_3D_by_2D.py  requirements.txt  test.py  test_2D.py  test_3D.py  test_3D_by_2D.py  test_fused_l1_ssim_loss.py  train_image.py
